Compilation_Racket_Mips/piton/tests/errors/subscript_index_type.py
a: str = "ABC"
b: str = "123"
a[b]
